--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Fun with trees",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "test": "tsc && karma start --single-run",
+    "test:w": "tsc && karma start"
   },
   "repository": {
     "type": "git",
@@ -22,6 +25,15 @@
   },
   "homepage": "https://github.com/alexanderwende/tree#readme",
   "devDependencies": {
+    "@types/core-js": "^0.9.34",
+    "@types/jasmine": "^2.5.35",
+    "core-js": "^2.4.1",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-mocha-reporter": "^2.2.0",
+    "systemjs": "^0.19.39",
     "typescript": "^2.0.3"
   }
 }
