--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "module": "es6",
-    "target": "es6",
+    "module": "system",
+    "target": "es5",
     "sourceMap": true,
     "moduleResolution": "node",
     "experimentalDecorators": true
